apps/sample-apps/sample-app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app-deployment
  labels:
    app: sample-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
      - name: sample-app
        image: ubuntu-k8s-1.local:30603/sample-app
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /healthy
            port: 8080
        readinessProbe:
          httpGet:
            path: /healthy
            port: 8080
        volumeMounts:
        - name: greatestconfig
          mountPath: /config/greatestconfig.yml
          readOnly: true
          subPath: greatestconfig.yml
        - name: supersecret
          mountPath: "/secrets"
          readOnly: true
        - name: supremepersistence
          mountPath: /mydata
      volumes:
      - name: supersecret
        secret:
          secretName: mysecret
      - name: greatestconfig
        configMap:
          defaultMode: 0600
          name: myconfigmap
      - name: supremepersistence
        persistentVolumeClaim:
          claimName: my-claim
