apps/sample-apps/sample-app/k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-app
  labels:
    app: sample-app
spec:
  containers:
  - name: sample-app
    image: ubuntu-k8s-1.local:30603/sample-app
    imagePullPolicy: Always
    ports:
    - containerPort: 8080
