apps/sample-apps/sample-app/k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: sample-app
spec:
  selector:
    app: sample-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: NodePort
